--- a/project-demo/content/pricing.html
+++ b/project-demo/content/pricing.html
@@ -1,3 +1,4 @@
+# Ubah konten menjadi: html
 <html>
   <head>
     <title>Pricing</title>
@@ -6,5 +7,8 @@
     <div>Service 1: $10</div>
     <div>Service 2: $20</div>
     <div>Service 3: $30</div>
+    <div>Service 7: $70</div>
+    <div>Service 8: $80</div>
+    <div>Service 9: $90</div>
   </body>
 </html>
